[package]
name = "dota-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
druid = "0.8.3"
futures = "0.3.28"
gql_client = "1.0.7"
itertools = "0.11.0"
serde = "1.0.188"
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
